--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py wwait_for_db.py && python manage.py test"
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db.py && python manage.py test"
 
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
